More Java, less Guava