@@ -1,10 +1,8 @@
 package uk.ac.ebi.atlas.experimentpage.context;
 
 import com.google.common.base.MoreObjects;
-import com.google.common.base.Predicate;
-import com.google.common.base.Predicates;
-import com.google.common.collect.FluentIterable;
 import uk.ac.ebi.atlas.model.DescribesDataColumns;
+import uk.ac.ebi.atlas.model.ExpressionUnit;
 import uk.ac.ebi.atlas.model.experiment.Experiment;
 import uk.ac.ebi.atlas.profiles.differential.ProfileStreamOptions;
 import uk.ac.ebi.atlas.search.SemanticQuery;
@@ -12,10 +10,18 @@ import uk.ac.ebi.atlas.species.Species;
 import uk.ac.ebi.atlas.web.ExperimentPageRequestPreferences;
 
 import java.util.Collection;
+import java.util.Comparator;
 import java.util.List;
+import java.util.function.Predicate;
+import java.util.stream.Stream;
+
+import static java.util.stream.Collectors.toList;
 
 public abstract class RequestContext
-        <D extends DescribesDataColumns, E extends Experiment<D>, K extends ExperimentPageRequestPreferences>
+        <D extends DescribesDataColumns,
+         U extends ExpressionUnit,
+         E extends Experiment<D>,
+         K extends ExperimentPageRequestPreferences<U>>
         implements ProfileStreamOptions<D> {
 
     protected final K requestPreferences;
@@ -46,21 +52,21 @@ public abstract class RequestContext
         return experiment.getDataColumnDescriptors();
     }
 
-    protected FluentIterable<D> dataColumnsToBeReturned(){
+    protected Stream<D> dataColumnsToBeReturned(){
         final Collection<String> selectedIds = requestPreferences.getSelectedColumnIds();
-        Predicate<D> keepColumns =
-                selectedIds.isEmpty() ? Predicates.<D>alwaysTrue()
-                        : dataColumnDescriptor -> selectedIds.contains(dataColumnDescriptor.getId());
-        return FluentIterable.from(experiment.getDataColumnDescriptors()).filter(keepColumns);
+
+        Predicate<D> keepColumns = selectedIds.isEmpty() ?
+                dataColumnDescriptor -> true :
+                dataColumnDescriptor -> selectedIds.contains(dataColumnDescriptor.getId());
+
+        return experiment.getDataColumnDescriptors().stream().filter(keepColumns);
     }
 
     public List<D> getDataColumnsToReturn() {
         return experiment.getDisplayDefaults().preserveColumnOrder()
-                ? dataColumnsToBeReturned().toList()
-                : dataColumnsToBeReturned().toSortedList((o1, o2) -> displayNameForColumn(o1).compareTo(displayNameForColumn(o2)));
+                ? dataColumnsToBeReturned().collect(toList())
+                : dataColumnsToBeReturned().sorted(Comparator.comparing(this::displayNameForColumn)).collect(toList());
     }
-
-
 
     public abstract String displayNameForColumn(D dataColumnDescriptor);
 
